--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -566,16 +566,20 @@ video {
   position: relative;
 }
 
+.left-\[-4\.5vw\] {
+  left: -4.5vw;
+}
+
 .left-\[2vw\] {
   left: 2vw;
 }
 
-.left-\[35\%\] {
-  left: 35%;
-}
-
 .top-0 {
   top: 0px;
+}
+
+.top-\[45px\] {
+  top: 45px;
 }
 
 .top-\[45vh\] {
@@ -586,148 +590,36 @@ video {
   top: 8vh;
 }
 
-.top-\[9\.5vh\] {
-  top: 9.5vh;
-}
-
-.top-\[20vh\] {
-  top: 20vh;
-}
-
-.top-\[10vh\] {
-  top: 10vh;
-}
-
-.top-\[1vh\] {
-  top: 1vh;
-}
-
-.top-\[15vh\] {
-  top: 15vh;
-}
-
-.top-\[4vh\] {
-  top: 4vh;
-}
-
-.top-\[7\.5vh\] {
-  top: 7.5vh;
-}
-
-.top-\[9vh\] {
-  top: 9vh;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[12vh\] {
-  top: 12vh;
-}
-
-.top-\[vh\] {
-  top: vh;
-}
-
-.top-\[7vh\] {
-  top: 7vh;
-}
-
-.left-\[22vw\] {
-  left: 22vw;
-}
-
-.top-\[2vh\] {
-  top: 2vh;
-}
-
-.right-\[10vw\] {
-  right: 10vw;
-}
-
-.right-\[10px\] {
-  right: 10px;
-}
-
-.right-\[5px\] {
-  right: 5px;
-}
-
-.right-\[5vw\] {
-  right: 5vw;
-}
-
-.right-\[2vw\] {
-  right: 2vw;
-}
-
-.right-\[0vw\] {
-  right: 0vw;
-}
-
-.left-\[-2vw\] {
-  left: -2vw;
-}
-
-.left-\[-4vw\] {
-  left: -4vw;
-}
-
-.left-\[-3\.5vw\] {
-  left: -3.5vw;
-}
-
-.left-\[\] {
-  left: ;
-}
-
-.left-\[3vw\] {
-  left: 3vw;
-}
-
-.left-\[6vw\] {
-  left: 6vw;
-}
-
 .left-0 {
   left: 0px;
 }
 
-.left-\[-1vw\] {
-  left: -1vw;
+.top-16 {
+  top: 4rem;
 }
 
-.left-\[-3vw\] {
-  left: -3vw;
+.left-\[-100\%\] {
+  left: -100%;
 }
 
-.left-\[-4\.5vw\] {
-  left: -4.5vw;
+.top-1 {
+  top: 0.25rem;
 }
 
-.top-\[-2vh\] {
-  top: -2vh;
+.top-14 {
+  top: 3.5rem;
 }
 
-.top-\[6vh\] {
-  top: 6vh;
+.top-10 {
+  top: 2.5rem;
 }
 
-.top-\[20px\] {
-  top: 20px;
+.top-8 {
+  top: 2rem;
 }
 
-.top-\[40px\] {
-  top: 40px;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-\[45px\] {
-  top: 45px;
+.top-12 {
+  top: 3rem;
 }
 
 .z-10 {
@@ -738,6 +630,10 @@ video {
   z-index: 20;
 }
 
+.-z-0 {
+  z-index: 0;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -746,12 +642,18 @@ video {
   z-index: 0;
 }
 
-.-z-10 {
-  z-index: -10;
-}
-
 .m-4 {
   margin: 1rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .mb-1 {
@@ -786,12 +688,28 @@ video {
   margin-top: 2vh;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
 
 .hidden {
   display: none;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .max-h-\[90vh\] {
@@ -802,10 +720,6 @@ video {
   min-height: 100vh;
 }
 
-.w-\[20vw\] {
-  width: 20vw;
-}
-
 .w-\[96vw\] {
   width: 96vw;
 }
@@ -814,12 +728,24 @@ video {
   width: 100%;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
 .max-w-md {
   max-width: 28rem;
 }
 
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -940,12 +866,17 @@ video {
   background-color: rgb(244 244 245 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-45 {
-  --tw-bg-opacity: 0.45;
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-80 {
-  --tw-bg-opacity: 0.8;
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-opacity-45 {
+  --tw-bg-opacity: 0.45;
 }
 
 .bg-opacity-95 {
@@ -980,9 +911,9 @@ video {
   padding: 2rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-4 {
@@ -1010,9 +941,14 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pl-4 {
@@ -1071,6 +1007,11 @@ video {
   line-height: 1rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1097,6 +1038,11 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -1158,6 +1104,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-zinc-300 {
   --tw-shadow-color: #d4d4d8;
   --tw-shadow: var(--tw-shadow-colored);
@@ -1183,19 +1135,24 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-red-300 {
+  --tw-shadow-color: #fca5a5;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-.backdrop-blur-md {
-  --tw-backdrop-blur: blur(12px);
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
+.backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -1214,16 +1171,26 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 #roomSelect {
@@ -1285,6 +1252,11 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .focus\:border-2:focus {
   border-width: 2px;
 }
@@ -1310,13 +1282,15 @@ video {
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
 
-@media (min-width: 640px) {
-  .sm\:left-\[\] {
-    left: ;
-  }
-}
-
 @media (min-width: 768px) {
+  .md\:static {
+    position: static;
+  }
+
+  .md\:left-\[-2\.5vw\] {
+    left: -2.5vw;
+  }
+
   .md\:left-\[25vw\] {
     left: 25vw;
   }
@@ -1325,64 +1299,12 @@ video {
     top: 10vh;
   }
 
-  .md\:top-\[\] {
-    top: ;
+  .md\:flex {
+    display: flex;
   }
 
-  .md\:top-\[20\] {
-    top: 20;
-  }
-
-  .md\:top-\[20vh\] {
-    top: 20vh;
-  }
-
-  .md\:top-\[4vh\] {
-    top: 4vh;
-  }
-
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:top-\[9\.5vh\] {
-    top: 9.5vh;
-  }
-
-  .md\:top-\[9vh\] {
-    top: 9vh;
-  }
-
-  .md\:left-\[\] {
-    left: ;
-  }
-
-  .md\:left-\[50vw\] {
-    left: 50vw;
-  }
-
-  .md\:left-\[30vw\] {
-    left: 30vw;
-  }
-
-  .md\:left-\[20vw\] {
-    left: 20vw;
-  }
-
-  .md\:left-\[22vw\] {
-    left: 22vw;
-  }
-
-  .md\:left-\[-3\.5vw\] {
-    left: -3.5vw;
-  }
-
-  .md\:left-\[-4\.5vw\] {
-    left: -4.5vw;
-  }
-
-  .md\:left-\[-2\.5vw\] {
-    left: -2.5vw;
+  .md\:hidden {
+    display: none;
   }
 
   .md\:max-h-\[80vh\] {
@@ -1405,8 +1327,30 @@ video {
     flex-direction: row;
   }
 
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
+  }
+
+  .md\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .md\:pr-20 {
     padding-right: 5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-7xl {
@@ -1419,8 +1363,25 @@ video {
     line-height: 1.75rem;
   }
 
-  .md\:backdrop-blur-md {
-    --tw-backdrop-blur: blur(12px);
+  .md\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .md\:shadow {
+    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .md\:shadow-none {
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .md\:backdrop-blur-0 {
+    --tw-backdrop-blur: blur(0);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
     backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   }
