--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -23,44 +23,42 @@
     </nav>
     <div class="flex w-full flex-wrap-reverse items-center mt-[2vh] p-8 justify-between">
         <div class="md:w-1/2 w-full">
-            <h1 class="md:text-7xl text-4xl mb-[3vh] font-bold text-zinc-950">Join the fun of chat!</h1>
-            <p class="md:text-lg text-base md:pr-20 pr-0 font-semibold text-zinc-600">
-                Chatify is a cutting-edge real-time chat application developed using Node.js, MongoDB, Socket.io, and Tailwind CSS. Our platform allows users to engage in anonymous conversations with others on the server seamlessly. Experience instant messaging with no delays, Chatify ensures your privacy and security. Simply enter your desired username to join the chat and start engaging with others. We encourage a respectful and inclusive environment for all users. Enjoy Chatify and happy chatting!
-            </p>
-            <form id="chatForm" method="post" class="flex flex-col items-center gap-4 mt-8 md:flex-row">
+            <h1 class="md:text-5xl text-3xl mb-[3vh] font-bold text-zinc-950">Send Us your Feedback!</h1>
+            
+            <form action="/feedback" method="post" class="flex flex-col gap-4 mt-8 ">
                 <input 
                     type="text" 
-                    name="username"
-                    placeholder="Pick a username" 
+                    name="name"
+                    placeholder="Enter your Name" 
                     class="py-3 px-4 text-lg rounded-md border border-gray-300 focus:outline-none focus:border-2 focus:border-red-500 transition duration-300 ease-in-out shadow-sm w-full md:w-auto"
                 >
-                <select name="room" id="roomSelect" class="bg-white w-full md:w-auto border border-gray-300 rounded-lg py-3 px-4 text-gray-700">
-                </select>
-                
+                <input 
+                    type="email" 
+                    name="email"
+                    placeholder="Enter your email" 
+                    class="py-3 px-4 text-lg rounded-md border border-gray-300 focus:outline-none focus:border-2 focus:border-red-500 transition duration-300 ease-in-out shadow-sm w-full md:w-auto"
+                >
+                <textarea 
+                    name="review" 
+                    id="review" 
+                    class="py-3 px-4 text-lg rounded-md border border-gray-300 focus:outline-none focus:border-2 focus:border-red-500 transition duration-300 ease-in-out shadow-sm w-full md:w-auto"
+                    placeholder="Enter your review"
+                ></textarea>
+               
                 <button 
                     type="submit" 
                     class="py-3 px-6 rounded-md bg-red-500 text-lg font-semibold text-white hover:bg-red-600 transition duration-300 ease-in-out shadow-md w-full md:w-auto"
                 >
-                    Join Chat
+                    Send
                 </button>
             </form>
-            <p id="msgbox" class="text-red-500"></p>
+            <p id="msgbox" class=""></p>
         </div>
         <div class="p-4 md:w-1/2 w-full flex justify-end">
-            <img src="/images/banner.png" alt="banner">
+            <img src="/images/feedback.png" alt="banner">
         </div>
     </div>
     <script src="/scripts/nav.js"></script>
-    <script src="/scripts/handlePopulateOptions.js"></script>
     <script src="/scripts/handleMessage.js"></script>
-    <script>
-        document.getElementById('chatForm').addEventListener('submit', (e) => {
-            e.preventDefault();
-            const form = e.target;
-            const room = document.getElementById('roomSelect').value;
-            form.action = `/chat/${room}`;
-            form.submit();
-        });
-    </script>
 </body>
 </html>
